syntax = "proto3";

package server.main.keyvalue.values;

option java_multiple_files = true;
option java_package = "keyring.server.main.keyvalue.values";

message KvAuthn {
    string authn_token = 1;
    int64 creation_time_millis = 2;
    int64 user_id = 3;
    string ip_address = 5;
    int64 session_entity_id = 4;
}

message KvSession {
    string session_token = 1;
    int64 creation_time_millis = 2;
    int64 user_id = 3;
    string ip_address = 5;
    int64 session_entity_id = 4;
}
